<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset">Reset Game</string>
    <string name="exit">Exit</string>
    <string name="findAll">Find all</string>
    <string name="focusImage">Focus Image</string>
    <string name="title_activity_result">Result Activity</string>
    <string name="Back">Back</string>
    <string name="result"></string>
    <string name="time"></string>

</resources>
