<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="restart"
            android:text="@string/reset" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="exitApp"
            
            android:text="@string/exit" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <TableRow 
            android:id="@+id/tableRow1" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow 
            android:id="@+id/tableRow2" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow 
            android:id="@+id/tableRow3" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow 
            android:id="@+id/tableRow4" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
        </TableRow>
    </TableLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/findAll" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/focusSize"
            android:layout_height="@dimen/focusSize"
            android:contentDescription="@string/focusImage"
            android:src="@drawable/icon3" />

    </LinearLayout>

    

</RelativeLayout>